# hw_24

./: .coverage  .env.dev  Dockerfile  README.md  docker-compose.yml  payment_data.json  permissions.py  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
curses/: models.py  paginators.py  permissions.py  serializers.py  urls.py  views.py
curses/migrations/: 0001_initial.py
lessons/: models.py  paginators.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
lessons/migrations/: 0001_initial.py
payments/: models.py  serializers.py  services.py  urls.py  views.py
payments/management/commands/: payment_base.py
subscribes/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: new_user.py  superuser.py
users/migrations/: 0001_initial.py
